--- a/styles.css
+++ b/styles.css
@@ -79,9 +79,7 @@ body{
     font-weight: 900;
     font-size: 1.5em;
     color: rgb(3, 2, 7);
-    position: relative;
-    width: 550px;
-    height: 600px;
+    position: absolute;
     background: transparent;
     border: 2px solid rgb(1, 62, 87);
     border-radius: 40px;
@@ -93,7 +91,8 @@ body{
 
 .formBox{
     width: 100%;
-    padding: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .formBox h1{
@@ -103,8 +102,6 @@ body{
 
 .inputBox{
     position: relative;
-    width: 100%;
-    height: 50px;
     border-bottom: 2px solid;
     margin: 30px 0;
 }
@@ -117,7 +114,7 @@ body{
 }
 
 input{
-    font-size: 1em;
+    font-size: .8em;
     font-weight: bolder;
     color: black;
 }
@@ -132,7 +129,6 @@ input{
     color: white;
     font-weight: 999;
     font-size: .8em;
-    margin-top: 30px;
     transition: .5s;
 }
 
